..F....... [ZBX-23687] fixed z-index of menu and server not running message

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3030,7 +3030,7 @@ $form-icon-btn: (
 .menu-popup {
 	position: fixed;
 	overflow-y: auto;
-	z-index: 10001;
+	z-index: 1001;
 	padding: 5px 15px 5px 25px;
 	min-width: 166px;
 	max-width: 250px;
