--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -2230,7 +2230,7 @@ div.dashboard-grid-widget-tophosts z-bar-gauge {
   flex-direction: column;
   position: fixed;
   bottom: 0;
-  z-index: 10000;
+  z-index: 1000;
   box-sizing: border-box;
   display: none;
   margin: 0; }
@@ -4605,7 +4605,7 @@ z-select[readonly] .focusable,
 .menu-popup {
   position: fixed;
   overflow-y: auto;
-  z-index: 10001;
+  z-index: 1001;
   padding: 5px 15px 5px 25px;
   min-width: 166px;
   max-width: 250px;
